fix(front): use % instead of dvw to fix Chromium scrollbar overflow

--- a/src/app.scss
+++ b/src/app.scss
@@ -44,7 +44,7 @@ button {
 }
 
 body {
-	width: 100dvw;
+	width: 100%;
 	height: 100dvh;
 	display: flex;
 	flex-direction: column;
